--- a/index.html
+++ b/index.html
@@ -52,46 +52,46 @@
             <div class="input-group" style="width: 100%;">
                 <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
                 <select class="form-control input-lg" id="jk">
-                    <option rel="nofollow" value="https://jx.parwix.com:4433/player/?url=" selected="">Parwix解析接口</option>
-                    <option rel="nofollow" value="https://www.mtosz.com/m3u8.php?url=">Mao解析接口</option>
-                    <option rel="nofollow" value="https://vip.bljiex.com/?v=">BL解析接口</option>
-                    <option rel="nofollow" value="https://z1.m1907.cn/?jx=">1907解析接口</option>
-                    <option rel="nofollow" value="https://www.administratorw.com/video.php?url=">无名小站接口</option>
-                    <option rel="nofollow" value="http://17kyun.com/api.php?url=">17kyun解析接口</option>
-                    <option rel="nofollow" value="https://vip.66parse.club/?url=">200解析接口</option>
-                    <option rel="nofollow" value="http://jx.rdhk.net/?v=">HK解析接口</option>
-                    <option rel="nofollow" value="https://www.8090g.cn/?url=">8090解析接口</option>
-                    <option rel="nofollow" value="https://www.8090g.cn/jiexi/?url=">8090备用接口</option>
-                    <option rel="nofollow" value="http://www.1717yun.com/jx/vip/index.php?url=">1717解析接口</option>
-                    <option rel="nofollow" value="https://www.ckmov.vip/api.php?url=">ckmov解析接口</option>
-                    <option rel="nofollow" value="http://jx.yparse.com/?url=">步步高解析接口</option>
-                    <option rel="nofollow" value="https://jx.m3u8.tv/jiexi/?url=">无广告解析接口</option>
-                    <option rel="nofollow" value="https://www.kpezp.cn/jlexi.php?url=">小蒋解析接口</option>
-                    <option rel="nofollow" value="https://www.xymav.com/?url=">七七解析接口</option>
-                    <option rel="nofollow" value="https://2.08bk.com/?url=">小七解析接口</option>
-                    <option rel="nofollow" value="https://okjx.cc/?url=">OK解析接口</option>
-                    <option rel="nofollow" value="https://api.v6.chat/?url=">音萌解析接口</option>
-					
-					<option rel="nofollow" value="http://api.bbbbbb.me/jx/?url=">解析接口001</option>
-					<option rel="nofollow" value="http://www.a305.org/weixin.php?url=">解析接口002</option>
-					<option rel="nofollow" value="http://api.91exp.com/svip/?url=">解析接口003</option>
-					<option rel="nofollow" value="http://api.bbbbbb.me/ipsign/player.php?v=">解析接口004</option>
-					<option rel="nofollow" value="http://api.ledboke.com/vip/?url=">解析接口005</option>
-					<option rel="nofollow" value="http://17kyun.com/api.php?url=>解析接口006</option>
-					<option rel="nofollow" value="http://vip.qike.ink/?url=">解析接口007</option>
-					<option rel="nofollow" value="http://www.47jx.com/?url=">解析接口008</option>
-					<option rel="nofollow" value="http://jx.hanximeng.com/vip.php?url=">解析接口009</option>
-					<option rel="nofollow" value="http://yun.baiyug.cn/vip/?url=">解析接口010</option>
-					<option rel="nofollow" value="http://jx.myxit.cn/vip/?url=">解析接口011</option>
-					<option rel="nofollow" value="http://aikan-tv.com/?url=">解析接口012</option>
-					<option rel="nofollow" value="http://jiexi.92fz.cn/player/vip.php?url=">解析接口013</option>
-					<option rel="nofollow" value="http://api.662820.com/xnflv/index.php?url=">解析接口014</option>
-					<option rel="nofollow" value="http://000o.cc/jx/ty.php?url=">解析接口015</option>
-					<option rel="nofollow" value="http://qigetv.xyz/tv.php?url=[/mw_shl_code]">解析接口016</option>
-					<option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口017</option>
-					<option rel="nofollow" value="http://jiexi.071811.cc/jx2.php?url=">解析接口018</option>
-					<option rel="nofollow" value="http://beaacc.com/api.php?url=">解析接口019</option>
-					<option rel="nofollow" value="http://qxkkk. bid/jx/jx.php?url=">解析接口020</option>
+			<option rel="nofollow" value="https://jx.parwix.com:4433/player/?url=" selected="">Parwix解析接口</option>
+			<option rel="nofollow" value="https://www.mtosz.com/m3u8.php?url=">Mao解析接口</option>
+			<option rel="nofollow" value="https://vip.bljiex.com/?v=">BL解析接口</option>
+			<option rel="nofollow" value="https://z1.m1907.cn/?jx=">1907解析接口</option>
+			<option rel="nofollow" value="https://www.administratorw.com/video.php?url=">无名小站接口</option>
+			<option rel="nofollow" value="http://17kyun.com/api.php?url=">17kyun解析接口</option>
+			<option rel="nofollow" value="https://vip.66parse.club/?url=">200解析接口</option>
+			<option rel="nofollow" value="http://jx.rdhk.net/?v=">HK解析接口</option>
+			<option rel="nofollow" value="https://www.8090g.cn/?url=">8090解析接口</option>
+			<option rel="nofollow" value="https://www.8090g.cn/jiexi/?url=">8090备用接口</option>
+			<option rel="nofollow" value="http://www.1717yun.com/jx/vip/index.php?url=">1717解析接口</option>
+			<option rel="nofollow" value="https://www.ckmov.vip/api.php?url=">ckmov解析接口</option>
+			<option rel="nofollow" value="http://jx.yparse.com/?url=">步步高解析接口</option>
+			<option rel="nofollow" value="https://jx.m3u8.tv/jiexi/?url=">无广告解析接口</option>
+			<option rel="nofollow" value="https://www.kpezp.cn/jlexi.php?url=">小蒋解析接口</option>
+			<option rel="nofollow" value="https://www.xymav.com/?url=">七七解析接口</option>
+			<option rel="nofollow" value="https://2.08bk.com/?url=">小七解析接口</option>
+			<option rel="nofollow" value="https://okjx.cc/?url=">OK解析接口</option>
+			<option rel="nofollow" value="https://api.v6.chat/?url=">音萌解析接口</option>
+			
+			<option rel="nofollow" value="http://api.baiyug.vip/index.php?url=">解析接口001</option>
+			<option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口002</option>
+			<option rel="nofollow" value="http://jx.quanmingjiexi.com/?url=">解析接口003</option>
+			<option rel="nofollow" value="https://okjx.cc/?url=">解析接口004</option>
+			<option rel="nofollow" value="https://vip.parwix.com:4433/player/?url=">解析接口005</option>
+			<option rel="nofollow" value="https://vip123kan.vip/m3u8.php?url=">解析接口006</option>
+			<option rel="nofollow" value="http://17kyun.com/api.php?url=">解析接口007</option>
+			<option rel="nofollow" value="https://vip.mmkv.cn/tv.php?url=">解析接口008</option>
+			<option rel="nofollow" value="https://660e.com/?url=">解析接口009</option>
+			<option rel="nofollow" value="https://jx.618g.com/?url=">解析接口010</option>
+			<option rel="nofollow" value="http://jx.myxit.cn/vip/?url=">解析接口011</option>
+			<option rel="nofollow" value="http://aikan-tv.com/?url=">解析接口012</option>
+			<option rel="nofollow" value="http://jiexi.92fz.cn/player/vip.php?url=">解析接口013</option>
+			<option rel="nofollow" value="http://api.662820.com/xnflv/index.php?url=">解析接口014</option>
+			<option rel="nofollow" value="http://000o.cc/jx/ty.php?url=">解析接口015</option>
+			<option rel="nofollow" value="http://qigetv.xyz/tv.php?url=[/mw_shl_code]">解析接口016</option>
+			<option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口017</option>
+			<option rel="nofollow" value="http://jiexi.071811.cc/jx2.php?url=">解析接口018</option>
+			<option rel="nofollow" value="http://beaacc.com/api.php?url=">解析接口019</option>
+			<option rel="nofollow" value="http://qxkkk. bid/jx/jx.php?url=">解析接口020</option>
                 </select>
             </div>
             <br />
