--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 			<option rel="nofollow" value="https://2.08bk.com/?url=">小七解析接口</option>
 			<option rel="nofollow" value="https://okjx.cc/?url=">OK解析接口</option>
 			<option rel="nofollow" value="https://api.v6.chat/?url=">音萌解析接口</option>
+			<option rel="nofollow" value="https://jx.908la.com/api/?key=b63hpZzgMlhu5gAoQe&url=">908解析接口</option>
+			<option rel="nofollow" value="http://jf.lemiaoyun.cn/home/api?type=ys&uid=397363&key=fghnstvwAENRS04789&url=">乐喵解析接口</option>
+			<option rel="nofollow" value="http://xxt.gbxy.net.cn/home/api?type=hezi&uid=613844&key=bdeghijlmzDQTUXY45&url=">椰子解析接口</option>
+			<option rel="nofollow" value="https://www.pangujiexi.com/jiexi/?url=">盘古解析接口</option>
+			<option rel="nofollow" value="http://jitang.online/?v=">jitang解析接口</option>
+			<option rel="nofollow" value="https://www.nxflv.com/?url=">nx解析接口</option>
+			
 			
 			<option rel="nofollow" value="http://api.baiyug.vip/index.php?url=">解析接口001</option>
 			<option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口002</option>
