--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 			<option rel="nofollow" value="https://www.pangujiexi.com/jiexi/?url=">盘古解析接口</option>
 			<option rel="nofollow" value="http://jitang.online/?v=">jitang解析接口</option>
 			<option rel="nofollow" value="https://www.nxflv.com/?url=">nx解析接口</option>
+			<option rel="nofollow" value="https://www.feisuplayer.com/m3u8/?url=">飞速解析接口</option>
 			
 			
 			<option rel="nofollow" value="http://api.baiyug.vip/index.php?url=">解析接口001</option>
@@ -119,7 +120,7 @@
         <div class="row text-center">
             <div class="col-sm-12">
                 <!--<br />-->
-                <span>Powered by:<a href="https://imyshare.com/"> iMyShare</a> <br> Copyright&copy;2021 All Rights Reserved.</span>
+                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a></span>
             </div>
         </div>
     </div>
