--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <strong>将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等，支持解析M3U8链接）粘贴到视频地址输入框之后点击播放按钮即可。</strong>
-	    <strong>本站所用接口均来源于网络，已开源部署在GitHub上(https://github.com/mawenshui/mawenshui.GitHub.io/)</strong>
+	    <strong>本站所用接口均来源于网络，如有侵权请联系删除</strong>
     </div>
     <div class="col-md-14 column">
         <div class="panel panel-default">
@@ -120,7 +120,7 @@
         <div class="row text-center">
             <div class="col-sm-12">
                 <!--<br />-->
-                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a></span>
+                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a></span><br>
             </div>
         </div>
     </div>
