--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-12">
-                <!--<br />-->
-                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a></span><br>
+                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a><br></br></span>
             </div>
         </div>
     </div>
