--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 <br />
 <div class="container" style="padding-top:0px;" id="wbk">
     <div class="alert alert-success alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <strong>将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等，支持解析M3U8链接）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></strong>
-	<strong>本站所用接口均来源于网络，如有侵权请联系删除</strong>
+	<div class="row text-center">
+		<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		<strong>将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等，支持解析M3U8链接）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></strong>
+		<strong>本站所用接口均来源于网络，如有侵权请联系删除</strong>
+	</div>
     </div>
     <div class="col-md-14 column">
         <div class="panel panel-default">
