--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-12">
-                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源</a></span>
+                <span><a href="https://github.com/mawenshui/mawenshui.GitHub.io"> GitHub开源地址</a></span>
 		<br></br>
             </div>
         </div>
