--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 </head>
 <body>
 <br />
+
+<div><font size="20" color="red">jixiang的小窝——视频解析</font></div>
 <div class="container" style="padding-top:0px;" id="wbk">
     <div class="alert alert-success alert-dismissible" role="alert">
 	<div class="row text-center">
-		<font size="20" color="red">jixiang的小窝——视频解析</font>
 		<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		<strong>将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></strong>
-		<strong>本站所用接口均来源于网络，如有侵权请联系删除</strong>
+		<strong color="red">将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></strong>
+		<strong color="red">本站所用接口均来源于网络，如有侵权请联系删除</strong>
 	</div>
     </div>
     <div class="col-md-14 column">
