--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="container" style="padding-top:0px;">
 	<div class="alert alert-success alert-dismissible" role="alert">
 		<div class="row text-center">
-			<font size="20" color="red">jixiang的小窝——视频解析</font>
+			<font size="20">jixiang的小窝——视频解析</font>
 		</div>
 	</div>
 </div>
