--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             <br />
             <div>
                 <button id="bf" type="button" class="btn btn-success btn-lg btn-block" onclick="dihejk()">开始播放</button>
+		<button id="bf" type="button" class="btn btn-success btn-lg btn-block" onclick="dihejk()">
+			<a href="https://xydh.fun/mawenshui">更多精彩内容</a>
+		</button>
             </div>
         </form>
     </div>
