--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
 						<div style="width:600px;height:600px" class="gongzhonghao">
 							<div class="image">
 							<a href="http://weixin.qq.com/r/ij8WDt-EDIJzrZtt92qY">jixiang的公众号</a>
-							<img style="width:570px;height:570px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7.jpg">
+							<img style="width:570px;height:570px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7_500px.png">
 							</div>
 						</div>
 						
 						<div style="width:600px;height:600px" class="daohangye">
 							<div class="image">
 							<a href="https://xydh.fun/mawenshui">jixiang的导航站</a>
-							<img style="width:570px;height:570px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99_1000px.png">
+							<img style="width:570px;height:570px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99_500px.png">
 							</div>
 						</div>
 					</div>
