--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 		<div class="table-bordered">
 			<table class="table-bordered">
 			<thead>
-				<tr><th>
+				<tr>
 					<div class="row">
-						<div style="width:600px;height:600px" class="gongzhonghao">
+						<div style="width:40%;height:600px" class="gongzhonghao">
 							<div class="image">
 								<a href="http://weixin.qq.com/r/ij8WDt-EDIJzrZtt92qY">
 									<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7_500px.png">
@@ -233,7 +233,7 @@
 							</div>
 						</div>
 						
-						<div style="width:600px;height:600px" class="daohangye">
+						<div style="width:40%;height:600px" class="daohangye">
 							<div class="image">
 								<a href="https://xydh.fun/mawenshui">
 									<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99_500px.png">
@@ -241,7 +241,6 @@
 							</div>
 						</div>
 					</div>
-				</th>
 				</tr>
 		</div>
 
