--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     {
       if (event.button == 2 || event.button == 3) 
       {
-        alert("欢迎使用jixiang的小窝视频解析");
+        alert("欢迎使用jixiang的视频解析");
         oncontextmenu = 'return false';
       }
     }
@@ -54,7 +54,7 @@
     {
       if (event.button == 2 || event.button == 3) 
       {
-        alert("欢迎使用jixiang的小窝视频解析");
+        alert("欢迎使用jixiang的视频解析");
         oncontextmenu = 'return false';
       }
     }
@@ -89,7 +89,7 @@
 	
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jixiang的小窝——视频解析</title>
+    <title>jixiang的视频解析</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #player
@@ -126,7 +126,7 @@
 <div class="container" style="padding-top:0px;">
 	<div class="alert alert-success alert-dismissible" role="alert">
 		<div class="row text-center">
-			<font size="20">jixiang的小窝——视频解析</font><br>
+			<font size="20">jixiang的视频解析</font><br>
 			<font size="5">更多精彩内容请关注微信公众号：jixiang的小窝</font><br>
 		</div>
 	</div>
