--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <div class="alert alert-success alert-dismissible" role="alert">
 	<div class="row text-center">
 		<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		<strong color="red">将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></strong>
-		<strong color="red">本站所用接口均来源于网络，如有侵权请联系删除</strong>
+		<font size="5">将视频网站链接（例如：爱奇艺、腾讯视频、优酷、土豆、芒果TV等）粘贴到视频地址输入框之后点击播放按钮即可。<br></br></font>
+		<font size="5">本站所用接口均来源于网络，如有侵权请联系删除</font>
 	</div>
     </div>
     <div class="col-md-14 column">
