--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 	
 	
-<body background:url="https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg">
+<body background="https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg">
 <br />
 
 	
@@ -139,7 +139,7 @@
     <div class="alert alert-success alert-dismissible" role="alert">
 	<div class="row text-center">
 		<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		<font size="5">将视频网站链接粘贴到视频地址输入框之后点击播放按钮即可。<br></br>如遇无法播放，请切换线路并再次点击播放按钮。<br></br></font>
+		<font size="5">将视频网站链接粘贴到视频地址输入框之后点击播放按钮即可<br></br>如遇无法播放，请切换线路并再次点击播放按钮<br></br></font>
 		<font size="5">本站所用接口均来源于网络，如有侵权请联系删除</font>
 	</div>
     </div>
