--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+<!-- 2D看板娘 -->
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
+<script type="text/javascript">
+    L2Dwidget.init({"display": {
+        "superSample": 2,
+        "width": 200,
+        "height": 400,
+             "position": "right",
+                 "hOffset": 0,
+        "vOffset": 0
+          }
+     });
+</script>
+
+
 	
 <script>//禁止右键
   function click(e) 
@@ -92,10 +110,17 @@
     <title>jixiang的视频解析</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <style>
+	    
+	/* 看板娘CSS */
+	#live2dcanvas {
+	    border: 0 !important;
+	};
+	
+	/* 播放器CSS */
         #player
         {
             background-color: black;
-        }
+        };
 
     </style>
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
