--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 	/* 看板娘CSS */
 	#live2dcanvas {
 	    border: 0 !important;
-	};
+	}
 	
 	/* 播放器CSS */
         #player
         {
             background-color: black;
-        };
+        }
 
     </style>
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
@@ -146,7 +146,7 @@
 </head>
 	
 	
-<body background="https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg">
+<body background="https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg" style="background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed;>
 <br />
 
 	
