--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<div style="width:40%; float:right" class="daohangye">
 				<div class="image">
 					<a href="https://xydh.fun/mawenshui">
-						<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99_500px.png">
+						<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/1647912486_500px.png">
 					</a>
 				</div>
 			</div>
