--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <style>
 	    
 	/* 看板娘CSS */
-	#live2dcanvas {
+	#live2dcanvas 
+	{
 	    border: 0 !important;
 	}
 	
@@ -114,14 +115,15 @@
 	
 	<!-- 2D看板娘 -->
 	<script type="text/javascript">
-	    L2Dwidget.init({"display": {
+	    L2Dwidget.init({"display": 
+		{
 		"superSample": 2,
 		"width": 200,
 		"height": 400,
-		     "position": "right",
-			 "hOffset": 0,
+		"position": "right",
+		"hOffset": 0,
 		"vOffset": 0
-		  }
+		 }
 	     });
 	</script>
 	
@@ -249,14 +251,14 @@
 		<div style="width:100%">
 			<div style="width:40%; float:left" class="gongzhonghao">
 				<div class="image">
-					<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7_500px.png">
+					<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7/1647913177_500px.png">
 				</div>
 			</div>
 
 			<div style="width:40%; float:right" class="daohangye">
 				<div class="image">
 					<a href="https://xydh.fun/mawenshui">
-						<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/1647912486_500px.png">
+						<img style="width:530px;height:530px" class="img-responsive" src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%AF%BC%E8%88%AA%E7%AB%99/1647913000_500px.png">
 					</a>
 				</div>
 			</div>
