--- a/index.html
+++ b/index.html
@@ -95,12 +95,14 @@
 		/* 播放器CSS */
 		#player
 		{
-		    background-color:rgb(248, 0, 255);
+		    width:60%;
+		    background-color:black;
 		}
 	    
 		//标题栏
 	    	headline
 		{
+		    width:60%;
 		    background-color:rgb(248, 0, 255);
 		    color:rgb(91, 239, 255);
 	    	}
