--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
 	
 <div class="headline" style="padding-top:0px;">
-	<div class="alert alert-success alert-dismissible" role="alert">
-		<div class="row text-center">
+	<div class="headline" role="alert">
+		<div class="headline">
 			<font size="20">jixiang的视频解析</font><br>
 			<font size="5">更多精彩内容请关注微信公众号：jixiang的小窝</font><br>
 		</div>
