--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 		//标题栏
 	    	headline
 		{
+			margin:0px auto;
+			text-align:center;
 		    width:60%;
 		    background-color:rgb(248, 0, 255);
 		    color:rgb(91, 239, 255);
