--- a/index.html
+++ b/index.html
@@ -138,24 +138,25 @@
 <br />
 
 	
-<div class="headline" style="padding-top:0px;">
+<div style="padding-top:0px;">
 	<div class="headline" role="alert">
 		<div class="headline">
 			<font size="20">jixiang的视频解析</font><br>
 			<font size="5">更多精彩内容请关注微信公众号：jixiang的小窝</font><br>
 		</div>
 	</div>
+	
+	<div class="alert alert-success alert-dismissible" role="alert">
+		<div class="row text-center">
+			<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+			<font size="5">将视频网站链接粘贴到视频地址输入框之后点击播放按钮即可<br></br>如遇无法播放，请切换线路并再次点击播放按钮<br></br></font>
+			<font size="5">本站所用接口均来源于网络，如有侵权请联系删除</font>
+		</div>
+    </div>
 </div>
 		
 		
-<div class="headline" style="padding-top:0px;" id="wbk">
-    <div class="alert alert-success alert-dismissible" role="alert">
-	<div class="row text-center">
-		<button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		<font size="5">将视频网站链接粘贴到视频地址输入框之后点击播放按钮即可<br></br>如遇无法播放，请切换线路并再次点击播放按钮<br></br></font>
-		<font size="5">本站所用接口均来源于网络，如有侵权请联系删除</font>
-	</div>
-    </div>
+<div style="padding-top:0px;" id="wbk">
     <div class="col-md-14 column">
         <div class="panel panel-default">
             <div id="kj" class="panel-body">
