--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <style>
 		//播放器CSS
-		#player
+		.player
 		{
 		    width:60%;
 		    background-color:black;
 		};
+		
+		#player_div
+		{
+			width:60%;
+			margin:0px auto;
+		}
 	    
 		//标题栏
 	    .headline
@@ -72,7 +78,7 @@
 </div>
 		
 		
-<div style="padding-top:0px;" id="wbk">
+<div class="player" style="padding-top:0px;" id="player_div">
     <div class="col-md-14 column">
         <div class="panel panel-default">
             <div id="kj" class="panel-body">
