--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     
 <p style="text-indent: 2em; margin-top: 30px;">
-系统将在 <span id="time">5</span> 秒钟后自动跳转至新网址，如果未能跳转，<a href="https://mawenshui.GitHub.io/HTML/null.html" title="点击访问">请点击</a>。</p>
+系统将在 <span id="time">5</span> 秒钟后自动跳转至新网址，如果未能跳转，<a href="https://vip.mawenshui.fun/HTML/null.html" title="点击访问">请点击</a>。</p>
 <script type="text/javascript">  
     delayURL();    
     function delayURL() { 
@@ -17,7 +17,7 @@
             document.getElementById("time").innerHTML = delay;
         } else {
      clearTimeout(t); 
-            window.location.href = "https://mawenshui.GitHub.io/HTML/null.html";
+            window.location.href = "https://vip.mawenshui.fun/HTML/null.html";
         }        
     } 
 </script>
