--- a/index.html
+++ b/index.html
@@ -202,39 +202,26 @@
                         <option rel="nofollow" value="https://j.zz22x.com/jx/?url=">数码小站接口②</option>
                         <option rel="nofollow" value="http://www.ikukk.com/?url=">数码小站接口③</option>
 
+                        <option rel="nofollow" value="https://www.qianyicp.com/jiexi/index.php?url=" selected="">VIP全网视频智能（多端稳定）</option>
+                        <option rel="nofollow" value="https://jx.elwtc.com/vip/?url=">VIP全网视频智能（专属二线）</option>
+                        <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
+                        <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
+                        <option rel="nofollow" value="https://parse.123mingren.com/?url=">腾讯线(清晰度高)</option>
+                        <option rel="nofollow" value="https://jx.parwix.com:4433/player/?url=">爱奇艺线(内含五线路)</option><!-- //api.jiexi.la/?url=-->
+                        <option rel="nofollow" value="https://okjx.cc/?url=">优酷线(手机端勿选)</option>
+                        <option rel="nofollow" value="https://api.jiexi.la/?url=">芒果线(电脑端较快)</option>
+                        <option rel="nofollow" value="https://z1.m1907.cn/?jx=">乐视线</option>
+                        
+                        <option rel="nofollow" value="http://vip.26db.cn/play/?v=" selected="">cd解析——①号vip引擎系统【稳定通用】</option>
+	                    <option rel="nofollow" value="http://vip.26db.cn/b/?url=">cd解析——②号vip引擎系统【稳定通用】</option>
+	                    <option rel="nofollow" value="http://vip.26db.cn/d/?url=">cd解析——③号vip引擎系统【稳定通用】</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/c/?url=">cd解析——④号vip引擎系统【稳定通用】</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/g/?url=">cd解析——⑤号vip引擎系统【稳定通用】</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/f/?url=">cd解析——⑥号vip引擎系统【稳定通用】</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/a/?url=">cd解析——⑦号通用vip引擎系统【稳定通用】</option>	  
+                        <option rel="nofollow" value="https://17kyun.com/jx.php?url=">cd解析——⑧号通用vip引擎系统【稳定通用】</option>
+                                                                                                                 
 
-                        <option rel="nofollow"
-                            value="http://jf.lemiaoyun.cn/home/api?type=ys&uid=397363&key=fghnstvwAENRS04789&url=">
-                            乐喵解析接口</option>
-                        <option rel="nofollow"
-                            value="http://xxt.gbxy.net.cn/home/api?type=hezi&uid=613844&key=bdeghijlmzDQTUXY45&url=">
-                            椰子解析接口</option>
-                        <option rel="nofollow" value="https://www.pangujiexi.com/jiexi/?url=">盘古解析接口</option>
-                        <option rel="nofollow" value="http://jitang.online/?v=">jitang解析接口</option>
-                        <option rel="nofollow" value="https://www.nxflv.com/?url=">nx解析接口</option>
-                        <option rel="nofollow" value="https://www.feisuplayer.com/m3u8/?url=">飞速解析接口</option>
-
-
-                        <option rel="nofollow" value="http://api.baiyug.vip/index.php?url=">解析接口001</option>
-                        <option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口002</option>
-                        <option rel="nofollow" value="http://jx.quanmingjiexi.com/?url=">解析接口003</option>
-                        <option rel="nofollow" value="https://okjx.cc/?url=">解析接口004</option>
-                        <option rel="nofollow" value="https://vip.parwix.com:4433/player/?url=">解析接口005</option>
-                        <option rel="nofollow" value="https://vip123kan.vip/m3u8.php?url=">解析接口006</option>
-                        <option rel="nofollow" value="http://17kyun.com/api.php?url=">解析接口007</option>
-                        <option rel="nofollow" value="https://vip.mmkv.cn/tv.php?url=">解析接口008</option>
-                        <option rel="nofollow" value="https://660e.com/?url=">解析接口009</option>
-                        <option rel="nofollow" value="https://jx.618g.com/?url=">解析接口010</option>
-                        <option rel="nofollow" value="http://jx.myxit.cn/vip/?url=">解析接口011</option>
-                        <option rel="nofollow" value="http://aikan-tv.com/?url=">解析接口012</option>
-                        <option rel="nofollow" value="http://jiexi.92fz.cn/player/vip.php?url=">解析接口013</option>
-                        <option rel="nofollow" value="http://api.662820.com/xnflv/index.php?url=">解析接口014</option>
-                        <option rel="nofollow" value="http://000o.cc/jx/ty.php?url=">解析接口015</option>
-                        <option rel="nofollow" value="http://qigetv.xyz/tv.php?url=[/mw_shl_code]">解析接口016</option>
-                        <option rel="nofollow" value="http://www.82190555.com/index/qqvod.php?url=">解析接口017</option>
-                        <option rel="nofollow" value="http://jiexi.071811.cc/jx2.php?url=">解析接口018</option>
-                        <option rel="nofollow" value="http://beaacc.com/api.php?url=">解析接口019</option>
-                        <option rel="nofollow" value="http://qxkkk. bid/jx/jx.php?url=">解析接口020</option>
                     </select>
                 </div>
                 <br />
