--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
                         <option rel="nofollow" value="https://2.08bk.com/?url=">小七解析接口</option>
                         <option rel="nofollow" value="https://okjx.cc/?url=">OK解析接口</option>
                         <option rel="nofollow" value="https://api.v6.chat/?url=">音萌解析接口</option>
-                        <option rel="nofollow" value="https://jx.908la.com/api/?key=b63hpZzgMlhu5gAoQe&url=">908解析接口
-                        </option>
+                        <option rel="nofollow" value="https://jx.908la.com/api/?key=b63hpZzgMlhu5gAoQe&url=">908解析接口</option>
 
                         <option rel="nofollow" value="https://jsap.attakids.com/?url=">数码小站接口①</option>
                         <option rel="nofollow" value="https://j.zz22x.com/jx/?url=">数码小站接口②</option>
@@ -207,19 +206,19 @@
                         <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
                         <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
                         <option rel="nofollow" value="https://parse.123mingren.com/?url=">腾讯线(清晰度高)</option>
-                        <option rel="nofollow" value="https://jx.parwix.com:4433/player/?url=">爱奇艺线(内含五线路)</option><!-- //api.jiexi.la/?url=-->
+                        <option rel="nofollow" value="https://jx.parwix.com:4433/player/?url=">爱奇艺线(内含五线路)</option>
                         <option rel="nofollow" value="https://okjx.cc/?url=">优酷线(手机端勿选)</option>
                         <option rel="nofollow" value="https://api.jiexi.la/?url=">芒果线(电脑端较快)</option>
                         <option rel="nofollow" value="https://z1.m1907.cn/?jx=">乐视线</option>
                         
-                        <option rel="nofollow" value="http://vip.26db.cn/play/?v=" selected="">cd解析——①号vip引擎系统【稳定通用】</option>
-	                    <option rel="nofollow" value="http://vip.26db.cn/b/?url=">cd解析——②号vip引擎系统【稳定通用】</option>
-	                    <option rel="nofollow" value="http://vip.26db.cn/d/?url=">cd解析——③号vip引擎系统【稳定通用】</option>
-                        <option rel="nofollow" value="http://vip.26db.cn/c/?url=">cd解析——④号vip引擎系统【稳定通用】</option>
-                        <option rel="nofollow" value="http://vip.26db.cn/g/?url=">cd解析——⑤号vip引擎系统【稳定通用】</option>
-                        <option rel="nofollow" value="http://vip.26db.cn/f/?url=">cd解析——⑥号vip引擎系统【稳定通用】</option>
-                        <option rel="nofollow" value="http://vip.26db.cn/a/?url=">cd解析——⑦号通用vip引擎系统【稳定通用】</option>	  
-                        <option rel="nofollow" value="https://17kyun.com/jx.php?url=">cd解析——⑧号通用vip引擎系统【稳定通用】</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/play/?v=">cd解析——①号</option>
+	                <option rel="nofollow" value="http://vip.26db.cn/b/?url=">cd解析——②号</option>
+	                <option rel="nofollow" value="http://vip.26db.cn/d/?url=">cd解析——③号</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/c/?url=">cd解析——④号</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/g/?url=">cd解析——⑤号</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/f/?url=">cd解析——⑥号</option>
+                        <option rel="nofollow" value="http://vip.26db.cn/a/?url=">cd解析——⑦号</option>	  
+                        <option rel="nofollow" value="https://17kyun.com/jx.php?url=">cd解析——⑧号</option>
                                                                                                                  
 
                     </select>
