--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <option rel="nofollow" value="https://j.zz22x.com/jx/?url=">数码小站接口②</option>
                         <option rel="nofollow" value="http://www.ikukk.com/?url=">数码小站接口③</option>
 
-                        <option rel="nofollow" value="https://www.qianyicp.com/jiexi/index.php?url=" selected="">VIP全网视频智能（多端稳定）</option>
+                        <option rel="nofollow" value="https://www.qianyicp.com/jiexi/index.php?url=">VIP全网视频智能（多端稳定）</option>
                         <option rel="nofollow" value="https://jx.elwtc.com/vip/?url=">VIP全网视频智能（专属二线）</option>
                         <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
                         <option rel="nofollow" value="https://api.yueliangjx.com/?url=">VIP全网视频（专属一线）</option>
