--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 
 
 <body>
+	
+<!-- 为网站添加满屏雪花下雪特效（接口版），添加到你网站的body标签内即可 -->
+    <script src='https://api.vvhan.com/api/snow'></script>
+	
     <div style="padding-top:0px;">
 
         <div class="alert alert-info">
