--- a/index.html
+++ b/index.html
@@ -239,14 +239,14 @@
 
 
                     <div style="width:100%">
-                        <div style="width:40%; height:width; float:left" class="gongzhonghao">
+                        <div style="width:40%; float:left" class="gongzhonghao">
                             <div class="image">
                                 <img style="width:530px;height:530px" class="img-responsive"
                                     src="https://mawenshui.oss-cn-beijing.aliyuncs.com/img-BMP/jixiang%E7%9A%84%E5%85%AC%E4%BC%97%E5%8F%B7/1647913177_500px.png">
                             </div>
                         </div>
 
-                        <div style="width:40%; height:width; float:right" class="daohangye">
+                        <div style="width:40%; float:right" class="daohangye">
                             <div class="image">
                                 <a href="https://xydh.fun/mawenshui">
                                     <img style="width:530px;height:530px" class="img-responsive"
