--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <div class="alert alert-info">
             <div>
                 <font size="20">jixiang的视频解析</font><br>
+		<font size="3">一个人只能被他的情绪控制，那么他永远不会成功</font><br>
                 <font size="5">更多精彩内容请关注微信公众号：jixiang的小窝</font><br>
             </div>
         </div>
