--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="D:\GitHub_repository\mawenshui.GitHub.io\JS\RunTime.js"></script>
+    <script src="https://github.com/mawenshui/mawenshui.GitHub.io/blob/284ed98164bd5dab5ee7edf948f65c81fb4d059c/JS/RunTime.js"></script>
     <script type="text/javascript"> eval(function (p, a, c, k, e, d) {
             e = function (c) {
                 return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36))
