更新背景图片为随机二次元

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             text-align: center;
             margin-left: auto;
             margin-right: auto;
-            background-image: url(https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg);
+            /* background-image: url(https://link.jscdn.cn/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBc0lMWU9pZXhyVUFqRU5CTUNkanB0UnZhZlFY.jpg); */ /* 固定图片背景 */
+            background-image: url(https://api.vvhan.com/api/acgimg);    /* 随机二次元图片接口 */
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment: fixed;
@@ -159,7 +160,6 @@
 
 
 <body>
-
     <!-- 为网站添加满屏雪花下雪特效（接口版），添加到你网站的body标签内即可 -->
     <script src='https://api.vvhan.com/api/snow'></script>
 
