--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
         #player {
             background-color: black;
         }
+
+        /* option{
+            filter: alpha(opacity=70); 
+            opacity: 0.7;
+        } */
     </style>
 </head>
 
@@ -164,8 +169,7 @@
     <script src='https://api.vvhan.com/api/snow'></script>
 
     <div style="padding-top:0px;">
-
-        <div class="alert alert-info">
+        <div class="alert alert-info" style="filter: alpha(opacity=70); opacity:0.7;">
             <div>
                 <font size="20">jixiang的视频解析</font><br>
                 <font size="5">一个人只能被他的情绪控制，那么他永远不会成功</font><br>
@@ -174,7 +178,7 @@
         </div>
 
 
-        <div class="alert alert-info alert-dismissable">
+        <div class="alert alert-info alert-dismissable" style="filter: alpha(opacity=70); opacity:0.7;">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
             <font size="5">将视频网站链接粘贴到视频地址输入框之后点击播放按钮即可</font><br>
             <font size="5">如遇无法播放，请切换线路并再次点击播放按钮</font><br>
@@ -187,14 +191,16 @@
     <div style="padding-top:0px;" id="wbk">
 
         <div class="col-md-14 column">
-            <div class="panel panel-default">
+
+            <div class="panel panel-default" style="filter: alpha(opacity=80); opacity:0.8;">
                 <div id="kj" class="panel-body">
                     <iframe src="" id="player" width="100%" height="600px" allowtransparency="true" frameborder="5"
                         scrolling="no"> </iframe>
                 </div>
             </div>
+
         </div>
-        <div class="col-md-14 column">
+        <div class="col-md-14 column" style="filter: alpha(opacity=70); opacity:0.7;">
             <form method="get">
                 <div class="input-group" style="width: 100%;">
                     <span class="input-group-addon input-lg" style="width: 80px;">选择接口</span>
@@ -249,12 +255,12 @@
 
                     </select>
                 </div>
-                <br />
+                <br>
                 <div class="input-group" style="width: 100%;">
                     <span class="input-group-addon input-lg" style="width: 80px;">播放地址</span>
                     <input class="form-control input-lg" type="search" placeholder="输入播放地址" id="url" />
                 </div>
-                <br />
+                <br>
                 <div>
                     <button id="bf" type="button" class="btn btn-success btn-lg btn-block"
                         onclick="dihejk()">开始播放</button>
